--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@eva-design/eva": "^1.2.0",
     "@ui-kitten/eva-icons": "^4.2.0",
     "expo": "^35.0.1",
+    "moment": "^2.24.0",
     "react": "16.11.0",
+    "react-circular-progressbar": "^2.0.3",
     "react-dom": "16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-animate-number": "^0.1.2",
