--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@eva-design/eva": "^1.2.0",
+    "@react-native-community/art": "^1.0.2",
     "@ui-kitten/eva-icons": "^4.2.0",
     "expo": "^35.0.1",
     "moment": "^2.24.0",
@@ -18,6 +19,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-animate-number": "^0.1.2",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-progress": "^4.0.1",
     "react-native-svg": "^9.13.3",
     "react-native-ui-kitten": "^4.2.0",
     "react-native-web": "^0.11.7",
