--- a/package.json
+++ b/package.json
@@ -8,29 +8,21 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@eva-design/eva": "^1.2.0",
-    "@react-native-community/art": "^1.0.2",
-    "@ui-kitten/eva-icons": "^4.2.0",
     "expo": "^35.0.1",
-    "moment": "^2.24.0",
-    "react": "16.11.0",
-    "react-circular-progressbar": "^2.0.3",
-    "react-dom": "16.11.0",
+    "expo-font": "^7.0.0",
+    "native-base": "^2.13.8",
+    "react": "16.8.3",
+    "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
-    "react-native-animate-number": "^0.1.2",
-    "react-native-gesture-handler": "^1.3.0",
-    "react-native-progress": "^4.0.1",
-    "react-native-svg": "^9.13.3",
-    "react-native-ui-kitten": "^4.2.0",
+    "react-native-easy-grid": "^0.2.2",
+    "react-native-gesture-handler": "^1.5.0",
+    "react-native-maps": "0.26.1",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3"
   },
   "devDependencies": {
-    "@types/react": "16.4.2",
-    "@types/react-native": "^0.60.22",
-    "babel-preset-expo": "^7.1.0",
-    "typescript": "^3.6.4"
+    "babel-preset-expo": "^7.1.0"
   },
   "private": true
 }
